--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
 		"axios": "^1.4.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"react": "^16.14.0",
+		"react-dom": "^16.14.0",
+		"react-is": "^16.13.1",
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
+		"styled-components": "^5.3.11",
 		"typescript": "^4.9.5",
 		"web-vitals": "^2.1.4"
 	},
