--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/node": "^16.18.43",
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
+		"@types/react-router-dom": "^5.3.3",
 		"axios": "^1.4.0",
 		"framer-motion": "^10.16.4",
 		"react": "^18.1.0",
