--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@chakra-ui/icons": "^2.1.1",
+		"@chakra-ui/react": "^2.8.1",
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
 		"@mui/material": "^5.14.5",
@@ -14,8 +16,9 @@
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
 		"axios": "^1.4.0",
+		"framer-motion": "^10.16.4",
 		"react": "^18.1.0",
-    	"react-dom": "^18.1.0",
+		"react-dom": "^18.1.0",
 		"react-is": "^16.13.1",
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
