--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
 		"@types/react-router-dom": "^5.3.3",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
 		"axios": "^1.4.0",
 		"react-is": "^16.13.1",
 		"react-router-dom": "^6.15.0",
