--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
 		"@types/react-router-dom": "^5.3.3",
 		"axios": "^1.4.0",
 		"framer-motion": "^10.16.4",
+		"jwt-decode": "^3.1.2",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
 		"react-icons": "^4.11.0",
 		"react-is": "^16.13.1",
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
+		"react-spring": "^9.7.3",
 		"styled-components": "^5.3.11",
 		"swiper": "^10.3.0",
 		"typescript": "^4.9.5",
+		"uuid": "^9.0.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
