--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"jwt-decode": "^3.1.2",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
+		"react-google-autocomplete": "^2.7.3",
 		"react-icons": "^4.11.0",
 		"react-is": "^16.13.1",
 		"react-router-dom": "^6.15.0",
