--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"react-spring": "^9.7.3",
 		"styled-components": "^5.3.11",
 		"swiper": "^10.3.0",
-		"typescript": "^4.9.5",
+		"typescript": "*",
 		"uuid": "^9.0.1",
 		"web-vitals": "^2.1.4"
 	},
@@ -58,6 +58,14 @@
 		]
 	},
 	"devDependencies": {
-		"@types/styled-components": "^5.1.27"
+		"@types/styled-components": "^5.1.27",
+		"@typescript-eslint/eslint-plugin": "^6.4.0",
+		"eslint": "^8.0.1",
+		"eslint-config-standard-with-typescript": "^39.1.0",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0"
 	}
 }
