--- a/package.json
+++ b/package.json
@@ -3,33 +3,32 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@chakra-ui/icons": "^2.1.1",
-		"@chakra-ui/react": "^2.8.1",
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
 		"@mui/material": "^5.14.5",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"@types/axios": "^0.14.0",
 		"@types/jest": "^27.5.2",
 		"@types/node": "^16.18.43",
-		"@types/react": "^18.2.21",
-		"@types/react-dom": "^18.2.7",
+		"@types/react": "^18.2.23",
+		"@types/react-dom": "^18.2.8",
 		"@types/react-router-dom": "^5.3.3",
-		"axios": "^1.4.0",
+		"axios": "^1.5.1",
 		"framer-motion": "^10.16.4",
 		"jwt-decode": "^3.1.2",
-		"react": "^18.1.0",
-		"react-dom": "^18.1.0",
-		"react-google-autocomplete": "^2.7.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
 		"react-is": "^16.13.1",
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
 		"react-spring": "^9.7.3",
-		"styled-components": "^5.3.11",
+		"styled-components": "^6.0.8",
 		"swiper": "^10.3.0",
 		"typescript": "*",
+		"use-debounce": "^9.0.4",
 		"uuid": "^9.0.1",
 		"web-vitals": "^2.1.4"
 	},
@@ -58,7 +57,7 @@
 		]
 	},
 	"devDependencies": {
-		"@types/styled-components": "^5.1.27",
+		"@types/styled-components": "^5.1.28",
 		"@typescript-eslint/eslint-plugin": "^6.4.0",
 		"eslint": "^8.0.1",
 		"eslint-config-standard-with-typescript": "^39.1.0",
