--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"@types/axios": "^0.14.0",
 		"@types/jest": "^27.5.2",
+		"@types/lodash.debounce": "^4.0.7",
 		"@types/node": "^16.18.43",
 		"@types/react": "^18.2.23",
 		"@types/react-dom": "^18.2.8",
@@ -18,6 +19,7 @@
 		"axios": "^1.5.1",
 		"framer-motion": "^10.16.4",
 		"jwt-decode": "^3.1.2",
+		"lodash.debounce": "^4.0.8",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
