--- a/.github/workflows/deploy-to-vm.yaml
+++ b/.github/workflows/deploy-to-vm.yaml
@@ -17,13 +17,10 @@ jobs:
          ssh -o 'StrictHostKeyChecking no' -i $TEMP ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} 'bash -s' < scripts/deploy.sh
 
       - name: Copy files to host
-        uses: nogsantos/scp-deploy@master
-        with:
-          src: ./*
-          host: ${{ secrets.SERVER_HOST }}
-          remote: /var/www/html/frontend
-          user: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
+        run: |
+          TEMP=$(mktemp)
+          echo "${{ secrets.SERVER_SSH_PRIVATE_KEY }}" > $TEMP
+          scp -R -o 'StrictHostKeyChecking no' -i $TEMP ./* ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:/var/www/html/frontend/
 
       - name: Create .env file
         run: |
