--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"@types/axios": "^0.14.0",
 		"@types/jest": "^27.5.2",
+		"@types/jwt-decode": "^3.1.0",
 		"@types/lodash.debounce": "^4.0.7",
 		"@types/node": "^16.18.43",
 		"@types/react": "^18.2.23",
