--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
+		"react-input-mask": "^2.0.4",
 		"react-is": "^16.13.1",
 		"react-responsive-carousel": "^3.2.23",
 		"react-router-dom": "^6.15.0",
