--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/node": "^16.18.43",
 		"@types/react": "^18.2.23",
 		"@types/react-dom": "^18.2.8",
+		"@types/react-input-mask": "^3.0.4",
 		"@types/react-router-dom": "^5.3.3",
 		"axios": "^1.5.1",
 		"framer-motion": "^10.16.4",
