--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react-router-dom": "^6.15.0",
 		"react-scripts": "5.0.1",
 		"react-spring": "^9.7.3",
+		"react-toastify": "^10.0.4",
 		"styled-components": "^6.0.8",
 		"swiper": "^10.3.0",
 		"typescript": "*",
